--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="header-container jumbotron">
     <div class="container">
-        <h1> Blas, Lapack and Scalapack </h1>
-        <p>Basic linear algebraic packages</p>
+        <h1> BLAS, LAPACK and SCALAPACK </h1>
+        <h2>Basic linear algebraic packages</h2>
         <p><a class="btn btn-primary btn-lg" href="{{ "/docs/quickstart/" | prepend: site.baseurl }}" role="button">Quick Start</a></p>
     </div>
 </div>
