Fix some bugs, including inconsistency with nav-bar

--- a/index.html
+++ b/index.html
@@ -4,51 +4,75 @@ layout: default
 
 <div class="header-container jumbotron">
     <div class="container">
+	    <right>
         <h1> BLAS, LAPACK and SCALAPACK </h1>
         <h2>Basic linear algebraic packages</h2>
         <p><a class="btn btn-primary btn-lg" href="{{ "/docs/quickstart/" | prepend: site.baseurl }}" role="button">Quick Start</a></p>
+        </right>
     </div>
 </div>
 
 <div class="container">
-    <div class="row">
-        <div class="col-md-6">
-            <h2 class="header-light regular-pad">What is Blas, Lapack and Scalapack?</h2>
-            <li class="lead">Blas and Lapack are basic packages for vector/matrix operations on single processor.</li>
-            <li class="lead">Scalapack extends a subset of Lapack routines to distributed memory MIMD parallel computers.</li>
-        </div>
-        <div class="col-md-6 text-left">
-<h3 class="header-light regular-pad">Capabilities</h3><style>
-  ul {
-  columns: 2;
-  -webkit-columns: 2;
-  -moz-columns: 2;
-}
-</style>
-<ul>
-  <li><a href="https://ericzhng.github.io/minecraft/"><font size="4pt">Blue text</font></a></li>
-  <li><a href="https://ericzhng.github.io/untested/"><font size="4pt">Yellow text</font></a></li>
-</ul>
-</div>
-  </div>
     <hr>
-    <div class="row"><style>
-	p1 {font-size: 16px}
-	</style>
+    <div class="row">
+      <div class="col-lg-12 text-center">
+            <h2 class="text-center">You are welcome to check out my page</h2>
+            <h4 class="text-center">You can refer to my
+			<a href="https://ericzhng.github.io/">personal website</a> and
+			<a href="https://ericzhng.github.io/psn-blogs/">_PSN_ blog</a> here.
+			</h4>
+        </div>
+    </div>
+    <hr>
+
+    <div class="row">
+        <div class="col-md-8">
+            <h2 class="header-light regular-pad">What is Blas, Lapack and Scalapack?</h2>
+            <blockquote>
+			<li class="lead">Blas and Lapack are basic packages for vector/matrix operations on single processor.</li>
+            <li class="lead">Scalapack extends a subset of Lapack routines to distributed memory MIMD parallel computers.</li>
+			</blockquote>
+        </div>
+			<div class="col-md-4 text-center">
+				<img src="img/matrix-logo.png" alt="" class="img-responsive">
+			</div>
+			
+			<!-- <h3 class="header-light regular-pad">Capabilities</h3>
+			
+			<style>
+			  ul {
+			  columns: 2;
+			  -webkit-columns: 2;
+			  -moz-columns: 2;
+			}
+			</style>
+			
+			<ul>
+			  <li><a href="https://ericzhng.github.io/minecraft/"><font size="4pt">Blue text</font></a></li>
+			  <li><a href="https://ericzhng.github.io/untested/"><font size="4pt">Yellow text</font></a></li>
+			</ul> -->
+	</div>
+	
+    <hr>
+    <div class="row">
         <div class="col-sm-4">
             <h1 class="text-center"><i class="fa fa-wrench" aria-hidden="true"></i></h1>
             <h3 class="text-center">Easy to install</h3>
-            <p1>to edit.</p1>
+            <p>to edit.</p>
         </div>
         <div class="col-sm-4">
             <h1 class="text-center"><i class="fa fa-cogs" aria-hidden="true"></i></h1>
             <h3 class="text-center">Wide game support</h3>
-            <p1>to edit.</p1>
+            <p>to edit.</p>
         </div>
         <div class="col-sm-4">
             <h1 class="text-center"><i class="fa fa-github" aria-hidden="true"></i></h1>
             <h3 class="text-center">100% Open Source</h3>
-            <p1>to edit. Please consider <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=HH97DSPF3MPKQ&source=url">donating</a> if you like the program.</p1>
+            <p>to edit. Please consider <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=HH97DSPF3MPKQ&source=url">donating</a> if you like the program.</p>
         </div>
     </div>
+    <hr>
+	<div class="col-lg-12 text-center">
+		<div class="img-footer"></div>
+	</div>
 </div>
