--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@ layout: default
 
     <div class="row">
         <div class="col-md-8">
-            <h2 class="header-light regular-pad">What is Blas, Lapack and Scalapack?</h2>
+            <h2 class="header-light regular-pad">What is BLAS and LAPACK and SCALAPACK?</h2>
             <blockquote>
-			<li class="lead">Blas and Lapack are basic packages for vector/matrix operations on single processor.</li>
-            <li class="lead">Scalapack extends a subset of Lapack routines to distributed memory MIMD parallel computers.</li>
+			<li class="lead">BLAS and LAPACK are basic packages for vector/matrix operations on single processor.</li>
+            <li class="lead">SCALAPACK extends a subset of LAPACK routines to distributed memory MIMD parallel computers.</li>
 			</blockquote>
         </div>
 			<div class="col-md-4 text-center">
